--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>myapp</title>
+    <title>Vue CLI: How to create a web application with vue js</title>
+    <meta name="description" content="Vue CLI - How to create a website with vue js: Build your first web application with vue js by using a Standard tooling for web application develop...">
+    <meta name="keywords" content="Build a web application with Vue JS, How to create a web application with vue js, How to create a website, Learn Vue, Vue CLI">
+    <meta name="author" content="Amaan Rajput">
   </head>
   <body>
     <noscript>
